<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kourseco.kourse.home_screens.home.HomeFragment"
        android:label="@string/title_kourse"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_shopFragment"
            app:destination="@id/shopFragment" />
        <action
            android:id="@+id/action_navigation_home_to_koursiliFragment"
            app:destination="@id/koursiliFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kourseco.kourse.home_screens.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.kourseco.kourse.home_screens.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.kourseco.kourse.home_screens.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.kourseco.kourse.ShopFragment"
        android:label="fragment_shop"
        tools:layout="@layout/fragment_shop" >
        <argument
            android:name="shop_type"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/koursiliFragment"
        android:name="com.kourseco.kourse.KoursiliFragment"
        android:label="fragment_koursili"
        tools:layout="@layout/fragment_koursili" />
</navigation>